kuberDemo/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy
  namespace: dev
  labels:
    app: my-deploy
spec:
  replicas: 5
  selector:
    matchLabels:
      app: my-deploy
  template:
    metadata:
      name: my-deploy
      labels:
        app: my-deploy
    spec:
      containers:
        - name: my-deploy
          image: tsarankouviachaslau/kuber-demo
          ports:
            - containerPort: 8081
