kuberDemo/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-deploy
  namespace: dev
spec:
  selector:
    app.kubernetes.io/name: proxy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
  type: NodePort
