kuberDemo/Ingress_resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
spec:
  rules:
    - host: localhost:8081
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
              service:
                name: localhost
                port:
                  number: 8081
