kuberDemo/ingress-paths.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-paths

spec:
  rules:
    - host: www.adv-it.net
      http:
        paths:
          - path: "/"
            backend:
              serviceName: argodemo
              servicePort: 8081
